Fix spacing

--- a/src/components/MoviePage/MoviePage.scss
+++ b/src/components/MoviePage/MoviePage.scss
@@ -18,9 +18,10 @@ section {
   }
   .movie-stats-div {
     flex-wrap: wrap;
+    margin-bottom: 10px;
   }
   .movie-info-div {
-    max-height: 90%;
+    max-height: 80%;
     padding-bottom: 50px;
   }
   .movie-info {
@@ -83,6 +84,7 @@ section {
     .movie-page-genres-div {
     width: 100%;
     height: 15%;
+    margin-bottom: 10px;
     }
   }  
 }
