--- a/src/components/ProfileCard/ProfileCard.scss
+++ b/src/components/ProfileCard/ProfileCard.scss
@@ -7,6 +7,8 @@
   margin-right: min(25px);
   p {
     max-width: 90%;
+    line-height: 17px;
+    margin-top: 5px;
   }
 }
 
